<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:alpha="0.8"
     >
     <TextView 
         android:layout_width="match_parent"
       android:layout_height="wrap_content"
         android:text="@string/soft_intro"
         android:gravity="center"
         android:textSize="30sp"
         android:textColor="@android:color/white"
         />
    
     <TextView 
         android:layout_width="match_parent"
       android:layout_height="wrap_content"
         android:text="@string/intro_content"
         android:gravity="start"
         android:textStyle="normal"
         android:textAlignment="textStart"
         
         android:textSize="30sp"
         android:textColor="@android:color/white"
         />
     <TextView 
         android:layout_width="match_parent"
       android:layout_height="wrap_content"
         android:text="@string/developer"
         android:gravity="start"
         android:textSize="30sp"
         android:textColor="@android:color/white"
         />
     <TextView 
         android:layout_width="match_parent"
       android:layout_height="wrap_content"
         android:text="@string/intro_intro"
         android:gravity="center"
         android:textSize="30sp"
         android:textColor="@android:color/white"
         />
</LinearLayout>
