<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:alpha="0.8"
     >
     <ScrollView 
         android:layout_width="match_parent"
       android:layout_height="match_parent"
         android:orientation="vertical"
         android:scrollbars="vertical"
         >
     <LinearLayout
         android:layout_width="match_parent"
     android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/scroll"
          >
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30sp"
         android:textColor="@android:color/white"
         android:gravity="start"
         android:text="@string/description"
         />
     <ImageView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/cat_animation"
         android:layout_gravity="center"
         android:id="@+id/cat"
         />
       <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30sp"
         android:textColor="@android:color/white"
         android:gravity="start"
         android:text="@string/word_s"
         />
       <ImageView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/cat_2"
         android:layout_gravity="center"
         />
       <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30sp"
         android:textColor="@android:color/white"
         android:gravity="start"
         android:text="@string/dianqing"
         />
       <ImageView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/cat_3"
         android:layout_gravity="center"
         />
       
       <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30sp"
         android:textColor="@android:color/white"
         android:gravity="start"
         android:text="@string/ganhuo"
         />
       <ImageView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/cat_4"
         android:layout_gravity="center"
         />
       <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30sp"
         android:textColor="@android:color/white"
         android:gravity="start"
         android:text="@string/android"
         />
       <ImageView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/cat_5"
         android:layout_gravity="center"
         /> 
         <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30sp"
         android:textColor="@android:color/white"
         android:gravity="start"
         android:text="@string/github"
         />
       <ImageView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/cat_5"
         android:layout_gravity="center"
         />
       <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30sp"
         android:textColor="@android:color/white"
         android:gravity="start"
         android:text="@string/more"
         />
       <ImageView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/cat_1"
         android:layout_gravity="center"
         />
       <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30sp"
         android:textColor="@android:color/white"
         android:gravity="center"
         android:text="@string/thank"
         />
       </LinearLayout>
       </ScrollView>
</LinearLayout>
