<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background"
    android:alpha="0.8"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qrcode"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:gravity="center"
        />
    <EditText 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/qr_input"
        android:hint="@string/qr_input"
        />
    <ScrollView 
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        >
        <LinearLayout 
             android:layout_width="match_parent"
           android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/qr_code1"
                android:id="@+id/qr1"
                />
             <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr1"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        />
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/qr_code2"
                android:id="@+id/qr2"
                />
            
                <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr2"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        />
        <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/qr_code3"
                android:id="@+id/qr3"
                />
        
            <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr3"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        />
        <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/qr_code4"
                android:id="@+id/qr4"
                />
        
            <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr4"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        />
        <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/qr_code5"
                android:id="@+id/qr5"
                />
        
            <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr5"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        />
        <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/qr_code6"
                android:id="@+id/qr6"
                />
        
            <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr6"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        />
    </LinearLayout>
    </ScrollView>
</LinearLayout>
