<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
     android:background="@drawable/background"
    android:alpha="0.8"
    >
       <LinearLayout 
           
          android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
       >
       <EditText 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/word_hint"
         android:textSize="30sp"
         android:id="@+id/year_input"
         android:textColor="@android:color/white"
         />
       <TextView 
        android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textSize="30sp"
     android:textColor="@android:color/white"
     android:gravity="start"
     android:textColorHint="@android:color/white"
     android:text="@string/year"
        />
        <EditText 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/word_hint"
         android:textSize="30sp"
         android:id="@+id/month_input"
         android:textColor="@android:color/white"
         />
       <TextView 
        android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textSize="30sp"
     android:textColor="@android:color/white"
     android:gravity="start"
     android:textColorHint="@android:color/white"
     android:text="@string/month"
        />
       </LinearLayout>
       <Button 
        android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/search_result_btn"
       android:gravity="center"
       android:textSize="30sp"
       android:textColor="@android:color/white"
       android:id="@+id/date_btn"
        />
        <ScrollView
         android:layout_width="match_parent"
     android:layout_height="wrap_content"
        android:scrollbars="vertical"
         >
    <TextView 
        android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/date_result"
     android:textSize="30sp"
     android:textColor="@android:color/white"
     android:gravity="start"
     android:textColorHint="@android:color/white"
        />
    
   </ScrollView>
</LinearLayout>
